signstar-request-signature/src/ssh/snapshots/signstar_request_signature__ssh__client__tests__parsing_config_known_hosts_bad_format_string_literal.snap
---
source: signstar-request-signature/src/ssh/client.rs
expression: error_msg
---
TOML parse error at line 6, column 16
  |
6 | known-hosts = [yes]
  |                ^^^
string values must be quoted, expected literal string
